--- a/setup/web/package.json
+++ b/setup/web/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dayjs": "^1.11.7",
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -19,6 +21,7 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwind": "^4.0.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
